--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A boilerplate for creating projects using React.js",
   "main": "index.js",
   "scripts": {
+    "svgr": "svgr -d src/Icons assets/",
     "start": "webpack-dev-server --config ./webpack.config.js  --mode development",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,6 +16,8 @@
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
+    "@svgr/cli": "^5.4.0",
+    "@svgr/webpack": "^5.4.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "css-loader": "^4.3.0",
